# vallox-modbus-controller

./: .gitignore  CMakeLists.txt  README.md  daemon.init  mqttVallox-example.conf  mqttVallox.service
src/: CMakeLists.txt  debug.cpp  debug.h  mqttVallox.cpp  vallox.cpp  vallox.h  valloxMqttMappings.h  vallox_constants.h
